tests/valid/numbers/fancy_function_2.rs
/*
return: 2
*/

main(): int return 2;