tests/invalid/boolean_operators/fancy_function_no_semicolon.rs
/*
fail: 1
*/

main(): int return 1 || 2